<resources>
    <string name="app_name">NuTronX</string>
    <string name="email_details">We have sent you a verification link to your email address, \nPlease kindly verify your email to proceed to you account... \nThank you.</string>
    <string name="verified">Please refresh if verified</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_account_setting">Account Setting</string>
    <string name="action_signout">Sign Out</string>


    <string name="menu_home">Home</string>
    <string name="menu_appointments">Appointments</string>
    <string name="menu_patients">Patients</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
</resources>
